--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#000000"/>
  <title>Payment Sarzz</title>
-  <meta name="description" content="All payment Sarzz"/>
-  <meta property="og:title" content="pembuatan web payment bisa ke t.me/XdeppDev"/>
+  <meta name="description" content="pembuatan web payment bisa ke t.me/XdeppDev"/>
+  <meta property="og:title" content="All payment Sarzz Official"/>
   <meta property="og:image" content="https://img1.pixhost.to/images/8193/634453755_zion.jpg"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
